# verdi

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  about.toml  build.rs  default.nix  deny.toml  flake.nix  justfile  package.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: message_from_bytes.rs  message_to_bytes.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  context.rs  core.rs  error.rs  keymap.rs  lib.rs  libinput.rs  main.rs  message.rs  proto.rs  protocol.rs  shader.wgsl  socket.rs  state.rs  wgpu_context.rs  winit_backend.rs
src/actors/: client.rs  client_listener.rs  compositor.rs  input_manager.rs  mod.rs  session.rs
src/actors/renderer/: mod.rs  wgpu_context.rs
src/protocol/: interfaces.rs  mod.rs
src/protocol/wayland/: buffer.rs  callback.rs  compositor.rs  display.rs  mod.rs  output.rs  registry.rs  seat.rs  shm.rs  shm_pool.rs  surface.rs
src/protocol/xdg/: mod.rs  surface.rs  toplevel.rs  wm_base.rs
src/wire/: args.rs  error.rs  message.rs  mod.rs  payload.rs  socket.rs
xtask/: Cargo.toml
xtask/src/: main.rs
