[package]
name = "verdi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1.6.0"
libfuzzer-sys = "0.4"

[dependencies.verdi]
path = ".."

[[bin]]
name = "message_from_bytes"
path = "fuzz_targets/message_from_bytes.rs"
test = false
doc = false
bench = false
