[package]
name = "verdi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
bytes = "1.6.0"
libfuzzer-sys = "0.4"

[dependencies.verdi]
path = ".."
features = ["fuzz"]

[[bin]]
name = "message_from_bytes"
path = "fuzz_targets/message_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "message_to_bytes"
path = "fuzz_targets/message_to_bytes.rs"
test = false
doc = false
bench = false

[patch.crates-io]
bytes = { git = "https://github.com/morr0ne/bytes", branch = "arbitrary" }
